--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,11 @@ img.rounded-circle {
 p {
   text-align: justify;
 }
-/* Inline mode */
+/* Inline mode : justify */
 .justify {
   text-align: justify;
+}
+/* Inline mode : center */
+.justify {
+  text-align: center;
 }
